--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Binaries
+name: Build Go Binaries
 
 on:
   push:
@@ -15,54 +15,81 @@ jobs:
         include:
           - os: ubuntu-latest
             platform: linux
-            arch: x86_64
-            target: x86_64-unknown-linux-gnu
+            arch: amd64
+            goos: linux
+            goarch: amd64
           - os: ubuntu-latest
             platform: linux
-            arch: aarch64
-            target: aarch64-unknown-linux-gnu
+            arch: arm64
+            goos: linux
+            goarch: arm64
           - os: windows-latest
             platform: windows
-            arch: x86_64
-            target: x86_64-pc-windows-msvc
+            arch: amd64
+            goos: windows
+            goarch: amd64
           - os: windows-latest
             platform: windows
-            arch: aarch64
-            target: aarch64-pc-windows-msvc
+            arch: arm64
+            goos: windows
+            goarch: arm64
           - os: macos-latest
-            platform: macos
-            arch: x86_64
-            target: x86_64-apple-darwin
+            platform: darwin
+            arch: amd64
+            goos: darwin
+            goarch: amd64
           - os: macos-latest
-            platform: macos
-            arch: aarch64
-            target: aarch64-apple-darwin
+            platform: darwin
+            arch: arm64
+            goos: darwin
+            goarch: arm64
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          targets: ${{ matrix.target }}
+          go-version: "1.22"
 
       - name: Build
-        run: cargo build --release --target ${{ matrix.target }}
-
-      - name: Create release directory
-        run: mkdir -p release
-
-      - name: Package binary
-        shell: bash
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
         run: |
-          if [ "${{ matrix.platform }}" = "windows" ]; then
-            cp target/${{ matrix.target }}/release/my-non-macos-games.exe release/my-non-macos-games-${{ matrix.platform }}-${{ matrix.arch }}.exe
-          else
-            cp target/${{ matrix.target }}/release/my-non-macos-games release/my-non-macos-games-${{ matrix.platform }}-${{ matrix.arch }}
-          fi
+          go build -o release/my-non-macos-games-${{ matrix.platform }}-${{ matrix.arch }}${{ matrix.platform == 'windows' && '.exe' || '' }} ./my-non-macos-games
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: binary-${{ matrix.platform }}-${{ matrix.arch }}
           path: release/
+
+  release:
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Release Assets
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            artifacts/binary-*/my-non-macos-games-*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
